--- a/src/components/Molecules/Card/Card.css
+++ b/src/components/Molecules/Card/Card.css
@@ -3,6 +3,7 @@
  flex-direction: column;
  background-color: aliceblue;
  border-radius: 8px;
- padding: 0 1em;
+ padding: 0;
+ margin: 0 .5rem;
  box-shadow: 0px 0px 7px 0px rgba(126, 25, 172, 0.3);
 }
