--- a/src/components/Molecules/Card/Card.css
+++ b/src/components/Molecules/Card/Card.css
@@ -4,6 +4,7 @@
  background-color: aliceblue;
  border-radius: 8px;
  padding: 0;
- margin: 0 .5rem;
+ margin: 0;
+ height: 225px;
  box-shadow: 0px 0px 7px 0px rgba(126, 25, 172, 0.3);
 }
